--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.15.4",
-    "redux": "^3.7.2"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^3.0.2",
+    "redux": "^3.7.2",
+    "save": "^2.3.1"
   }
 }
