--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0",
     "redux-logger": "^3.0.6",
     "webpack": "^3.5.5"
   },
@@ -21,6 +23,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.15.4",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
