Create Books Form Component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
                 "ignoreRestSiblings": false
             }
         ],
+        "react/jsx-uses-vars": [2],
         "no-console": 0       
     }
 }
