--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "reduxApp",
+  "name": "ReactReduxApp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "eslint": "eslint .\\src\\ --ext .js",
+    "test": ""    
   },
   "keywords": [],
   "author": "",
