--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "ReactReduxApp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "reactreduxapp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "eslint": "eslint .\\src\\ --ext .js",
-    "test": ""
+    "start": "node ./bin/www",
+    "eslint": "eslint .\\src\\ --ext .js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
@@ -17,12 +13,18 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0",
+    "serve-favicon": "~2.4.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "express": "^4.15.4",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
