--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -32,6 +33,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "save": "^2.3.1",
     "serve-favicon": "~2.4.5"
   }
