--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/nodemon ./bin/www",
+    "start": "node ./bin/www | node apiServer.js",
     "eslint": "eslint .\\src\\ --ext .js"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "http-proxy": "^1.16.2",
     "jade": "~1.11.0",
     "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
