--- a/BooksShop_Universal/package.json
+++ b/BooksShop_Universal/package.json
@@ -24,13 +24,12 @@
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "^2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "http-proxy": "^1.16.2",
-    "jade": "~1.11.0",
     "mongoose": "^4.13.4",
     "morgan": "~1.9.0",
+    "pug": "^2.0.0-rc.4",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
